Spotless format refactor